Fixed issue #1 - failed target initialize when target contains comment

--- a/Source/Norika.MsBuild.Core.Data.IntegrationTest/Norika.MsBuild.Core.Data.IntegrationTest.csproj
+++ b/Source/Norika.MsBuild.Core.Data.IntegrationTest/Norika.MsBuild.Core.Data.IntegrationTest.csproj
@@ -17,6 +17,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Include="TestData\ProjectFiles\TargetWithCommentInside.tcsproj">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
       <None Include="TestData\ProjectFiles\TargetWithOnError.tcsproj">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
